# flatbuffer

./: CMakeLists.txt  Readme  compile_commands.json  file.json
fb_gen/: Monster_generated.h
libs/flatbuffers/include/flatbuffers/: flatbuffers.h  flatc.h  flexbuffers.h  idl.h  stl_emulation.h
libs/flatbuffers/src/: idl_gen_ts.cpp  idl_parser.cpp
proto/: Monster.fbs
serialize_result/: file
src/: main.cpp  test.h
